<resources>
    <string name="app_name">AndroidDevelopment1-2021-2022</string>
    <string name="app_name2">AndroidDevelopment1-2021-2022</string>
    <string name="print">printing</string>
    <string name="print2">print</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age1">young (from 15 to 20)</string>
    <string name="age2">youths (from 21 to 40)</string>
    <string name="age3">elder (from 41 to 60)</string>
    <string name="age4">Person age</string>
    <string name="gender_text">Person gender</string>
    <string name="java">java</string>
    <string name="c">C</string>
    <string name="save">Save</string>
    <string name="house">house</string>
    <string name="apartment">apartment</string>
    <string name="studio">studio</string>
    <string name="under_500">Under 500$</string>
    <string name="from_501_to_1000">From 501$ to 1000$</string>
    <string name="from_1001_to_2000">From 1001$ to 2000$</string>
    <string name="above_2001">Above 2001$</string>
    <string name="Where_you_live">Where you live</string>
    <string name="salary_range">salary range</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="salary">salary</string>
    <string name="done">Done</string>
    <string name="open1">open Activity</string>
    <string name="finish_activity">finish Activity</string>
    <string name="send_email">Send Email</string>
    <string name="retriev">Retriev</string>
    <string name="add">Add</string>
    <string name="add_category">add category</string>
    <string name="read_category">read category</string>
    <string name="edit_category">edit category</string>
    <string name="delete_category">delete category</string>
    <string name="read">read</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="next">Next</string>
    <string name="show_alert_dialog">show alert dialog</string>
    <string name="price">Price</string>
    <string name="show_custom_dialog">show custom dialog</string>
    <string name="show_success_toast">show success toast</string>
    <string name="show_fail_toast">show fail toast</string>
    <string name="show_toast">show toast</string>
    <string name="show_toast2">show toast2</string>


</resources>